ext/ply/test/lex_error4.exp
./lex_error4.py:17: Rule 't_error' has too many arguments.
SyntaxError: lex: Unable to build lexer.
